--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
     <module>pattern-01-proxy</module>
     <module>pattern-02-composite</module>
+    <module>creational-patterns-01-singleton</module>
   </modules>
 
   <properties>
