factory design pattern.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>pattern-01-proxy</module>
     <module>pattern-02-composite</module>
     <module>creational-patterns-01-singleton</module>
+    <module>creational-patterns-02-factory</module>
   </modules>
 
   <properties>
