factory design pattern.

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>pattern-02-composite</module>
     <module>creational-patterns-01-singleton</module>
     <module>creational-patterns-02-factory</module>
+    <module>creational-patterns-03-builder</module>
   </modules>
 
   <properties>
@@ -21,6 +22,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
