--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <module>creational-patterns-01-singleton</module>
     <module>creational-patterns-02-factory</module>
     <module>creational-patterns-03-builder</module>
+    <module>stuctural-patterns-01-adaptor</module>
+      <module>stuctural-patterns-02-bridge</module>
   </modules>
 
   <properties>
